# ragops-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  design-qa.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  main.py
app/agent/: __init__.py  intent.py  memory.py  service.py  tools.py
app/api/: __init__.py  dependencies.py  routes.py  schemas.py
app/core/: __init__.py  config.py
app/domain/: __init__.py  models.py
app/embeddings/: __init__.py  providers.py
app/llm/: __init__.py  generator.py
app/rag/: __init__.py  chunking.py  ingestion.py  parsers.py  retrieval.py  tokenization.py
app/security/: __init__.py  guardrails.py
app/storage/: __init__.py  repository.py  vector_store.py
docs/: ARCHITECTURE.md  BUSINESS_SCENARIO.md  DESIGN_REVIEW.md  IMPLEMENTATION_STEPS.md  INTERVIEW_KNOWLEDGE.md  INTERVIEW_PREP_GUIDE.md  INTERVIEW_QA.md
frontend/: app.js  index.html  styles.css
samples/eval/: questions.jsonl
samples/knowledge/: product-guide.md  refund-policy.md  security-handbook.md
scripts/: __init__.py  bootstrap_demo.py  evaluate.py  self_check.py
tests/: test_agent.py  test_api.py  test_auth.py  test_chunking.py  test_guardrails.py  test_retrieval.py  test_security_and_lifecycle.py
