[project]
name = "enterprise-rag-agent-hub"
version = "0.1.0"
description = "Multi-tenant enterprise RAG and customer-service agent reference implementation"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
  "pymilvus>=2.5,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
